[package]
name = "bitbucket-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.19", features = ["json"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
log = "0.4.27"
env_logger = "0.11.8"
serde_urlencoded = "0.7.1"
