[package]
name = "bitbucket-mcp"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "bitbucket_stdio"
path = "src/bitbucket_stdio.rs"

[dependencies]
rmcp = { version = "0.1.5", features = ["server", "transport-io"]}
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.31"
